test/log/reduction/vrdotp_vv_u32_m.txt
vrdotp_vv_u32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vrdotp_vv_u32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vrdotp_vv_u32_m.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vrdotp_vv_u32_m.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vrdotp_vv_u32_m.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vrdotp_vv_u32_m.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vrdotp_vv_u32_m.c:22:6: warning: no previous prototype for 'vrdotp_vv_u32_m_golden' [-Wmissing-prototypes]
   22 | void vrdotp_vv_u32_m_golden(bool16_t *mask,uint32_t *a,uint32_t *b,uint32_t *c,uint32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
vrdotp_vv_u32_m.c: In function 'vrdotp_vv_u32_m_golden':
vrdotp_vv_u32_m.c:24:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   24 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vrdotp_vv_u32_m.c:24:1: note: each undeclared identifier is reported only once for each function it appears in
vrdotp_vv_u32_m.c:24:9: error: expected ';' before 'Line'
   24 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vrdotp_vv_u32_m.c:22:39: warning: unused parameter 'mask' [-Wunused-parameter]
   22 | void vrdotp_vv_u32_m_golden(bool16_t *mask,uint32_t *a,uint32_t *b,uint32_t *c,uint32_t *exp_result) {
      |                             ~~~~~~~~~~^~~~
vrdotp_vv_u32_m.c:22:54: warning: unused parameter 'a' [-Wunused-parameter]
   22 | void vrdotp_vv_u32_m_golden(bool16_t *mask,uint32_t *a,uint32_t *b,uint32_t *c,uint32_t *exp_result) {
      |                                            ~~~~~~~~~~^
vrdotp_vv_u32_m.c:22:66: warning: unused parameter 'b' [-Wunused-parameter]
   22 | void vrdotp_vv_u32_m_golden(bool16_t *mask,uint32_t *a,uint32_t *b,uint32_t *c,uint32_t *exp_result) {
      |                                                        ~~~~~~~~~~^
vrdotp_vv_u32_m.c:22:78: warning: unused parameter 'c' [-Wunused-parameter]
   22 | void vrdotp_vv_u32_m_golden(bool16_t *mask,uint32_t *a,uint32_t *b,uint32_t *c,uint32_t *exp_result) {
      |                                                                    ~~~~~~~~~~^
vrdotp_vv_u32_m.c:22:90: warning: unused parameter 'exp_result' [-Wunused-parameter]
   22 | void vrdotp_vv_u32_m_golden(bool16_t *mask,uint32_t *a,uint32_t *b,uint32_t *c,uint32_t *exp_result) {
      |                                                                                ~~~~~~~~~~^~~~~~~~~~
vrdotp_vv_u32_m.c: In function 'main':
vrdotp_vv_u32_m.c:42:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   42 |     data_init_bool(mask, exp_mask, 16*2, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vrdotp_vv_u32_m.c:48:28: warning: passing argument 1 of 'vrdotp_vv_u32_m_golden' from incompatible pointer type [-Wincompatible-pointer-types]
   48 |     vrdotp_vv_u32_m_golden(exp_mask,exp_a,exp_b,exp_c,exp_result);
      |                            ^~~~~~~~
      |                            |
      |                            uint64_t * {aka long long unsigned int *}
vrdotp_vv_u32_m.c:22:39: note: expected 'bool16_t *' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   22 | void vrdotp_vv_u32_m_golden(bool16_t *mask,uint32_t *a,uint32_t *b,uint32_t *c,uint32_t *exp_result) {
      |                             ~~~~~~~~~~^~~~
vrdotp_vv_u32_m.c:56:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
   56 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     uint32_t {aka long unsigned int}
      |                                                               %lx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrdotp_vv_u32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vrdotp_vv_u32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vrdotp_vv_u32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrdotp_vv_u32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed